welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: reassignment to val
  setCouleurBrosse = Color.red;
                   ^